# Project-Template

./: .gitignore  CITATION.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  config.hpp.in
.github/workflows/: sync-from-template.yml
cmake/: color-message.cmake  compiler-options.cmake  cross-compile.cmake  packages.cmake  project-info.cmake  project-setting.cmake  target-link-libraries.cmake
cmake/platforms-toolchain/: android-toolchain.cmake  ios-toolchain.cmake  linux-toolchain.cmake  macos-toolchain.cmake  unix-toolchain.cmake  windows-toolchain.cmake
config/: project.cmake  system-config.json
include/: common.hpp
include/examples/: languagetest.hpp  platformtest.hpp
precompiled/: pch.hpp
properties/Windows/: app.rc  resource.h
properties/macOS/: Info.plist.in
source/: attributes.hpp  common.hpp  config.cpp  config.hpp  defines.hpp  interface.cpp  interface.hpp  main.cpp
source/entrypoint/qt/nogui/: main.cpp
source/entrypoint/qt/qtquick/: main.cpp
source/entrypoint/qt/qtwidget/: main.cpp
source/entrypoint/stl/: main.cpp
source/examples/: compilertest.cpp  compilertest.hpp  configtest.cpp  configtest.hpp  languagetest.cpp  librarytest.cpp  librarytest.hpp  platformtest.cpp  thirdpartytest.cpp  thirdpartytest.hpp
ui/classic/: mainwindow.cpp
ui/modern/: main.qml
ui/qtquick/: main.qml  qml.qrc  test.qml
ui/widgets/: mainwindow.hpp
utilities/: featuretest.hpp  prefuncs.hpp  preprocessor.hpp  types.hpp
